# Upload_OHIF_ROI

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: pyohif-bug-report.md  pyohif-development-request.md  pyohif-development-template.md
src/: ohif.py
